--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
