--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
