--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.3",
     "next": "^15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
