--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/products/schedule",
-      "schedule": "*/5 * * * *"
+      "path": "/api/cron",
+      "schedule": "0 10 * * *"
     }
   ]
 }
