--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pricelens",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "react-is": "^19.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -33,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
