--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write . --ignore-path .prettierignore"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-scroll-area": "^1.2.2",
