--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
