--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scan": "^0.2.14",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
