--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 CRON_SECRET=
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
