--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.76.1",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "axios": "^1.7.9",
