--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "^15.1.7",
@@ -64,6 +65,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
