--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write . --ignore-path .prettierignore"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@hookform/resolvers": "^5.0.1",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -38,6 +40,7 @@
     "@tanstack/react-query": "^5.76.1",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
+    "ai": "^4.3.16",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
