--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
     {
       "path": "/api/cron",
       "schedule": "0 */6 * * *"
+    },
+    { "path": "/api/cron/sync",
+      "schedule": "0 0 * * *"
     }
   ]
 }
