--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
+NEXT_PUBLIC_SITE_URL=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 CRON_SECRET=
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
 OPEN_API_KEY=
+GOOGLE_CLOUD_CLIENT_ID=
+GOOGLE_CLOUD_CLIENT_SECRET=
