--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,6 @@
       "path": "/api/cron",
       "schedule": "0 */6 * * *"
     },
-    { "path": "/api/cron/sync",
-      "schedule": "0 0 * * *"
-    }
+    { "path": "/api/cron/sync", "schedule": "0 0 * * *" }
   ]
 }
