--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,11 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 */4 * * *"
     },
-    { "path": "/api/cron/sync", "schedule": "0 0 * * *" }
+    {
+      "path": "/api/cron/sync",
+      "schedule": "0 0 * * *"
+    }
   ]
 }
