--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "supabase": "^2.15.8",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
