--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-scan": "^0.2.14",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
+    "redis": "^5.7.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
