--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.3.1",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
@@ -66,7 +67,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
