feat: upstash scheduler

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ OPEN_API_KEY=
 GOOGLE_CLOUD_CLIENT_ID=
 GOOGLE_CLOUD_CLIENT_SECRET=
 REDIS_URL=
+QSTASH_CURRENT_SIGNING_KEY=
+QSTASH_NEXT_SIGNING_KEY=
+QSTASH_TOKEN=
+QSTASH_URL=
