--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "crons": [
     {
-      "path": "/api/cron",
-      "schedule": "0 */4 * * *"
+      "path": "/api/scrape/scheduler",
+      "schedule": "0 6 * * *"
     },
     {
       "path": "/api/cron/sync",
