--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,9 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "crons": [
     {
+      "$description": "Scheduler endpoint cron job triggered by Vercel every day at 6am.",
       "path": "/api/scrape/scheduler",
       "schedule": "0 6 * * *"
-    },
-    {
-      "path": "/api/cron/sync",
-      "schedule": "0 0 * * *"
     }
   ]
 }
