--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
