feat: product results cache

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ QSTASH_CURRENT_SIGNING_KEY=
 QSTASH_NEXT_SIGNING_KEY=
 QSTASH_TOKEN=
 QSTASH_URL=
+ENABLE_STORE_PRODUCTS_CACHE=true
+STORE_PRODUCTS_CACHE_TTL_SECONDS=120
