--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.5.1",
+    "https-proxy-agent": "^7.0.6",
     "immer": "^11.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.561.0",
