feat: optimization - async load recharts sp card, speed insights, 20 products per page

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@upstash/qstash": "^2.8.4",
     "@vercel/analytics": "^1.6.1",
     "@vercel/kv": "^3.0.0",
+    "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.113",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
@@ -63,7 +64,6 @@
     "geist": "^1.5.1",
     "https-proxy-agent": "^7.0.6",
     "immer": "^11.0.1",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
@@ -90,7 +90,6 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/react": "^16.3.0",
-    "@types/lodash": "^4.17.21",
     "@types/node": "^25.0.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
