--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "geist": "^1.5.1",
     "https-proxy-agent": "^7.0.6",
     "immer": "^11.0.1",
+    "import-in-the-middle": "^2.0.6",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
@@ -77,6 +78,7 @@
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.5.1",
     "redis": "^5.10.0",
+    "require-in-the-middle": "^8.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
