--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.91",
+    "@ericblade/quagga2": "^1.12.1",
     "@hookform/resolvers": "^5.2.2",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -67,6 +68,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.7.0",
+    "html5-qrcode": "^2.3.8",
     "https-proxy-agent": "^7.0.6",
     "immer": "^11.1.4",
     "import-in-the-middle": "^2.0.6",
