--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.3.1",
+    "@zxing/browser": "^0.1.5",
     "ai": "^5.0.136",
     "axios": "^1.13.5",
     "cheerio": "^1.2.0",
