--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:status": "supabase status",
     "supabase:generate:types": "npx supabase gen types typescript --project-id srpjxzydhsumqbrzpisa > src/types/supabase.ts",
     "backfill:pingo-doce-barcodes": "tsx scripts/backfill-pingo-doce-barcodes.ts",
+    "scraper:local": "tsx scripts/run-scraper-local.ts",
     "icons:generate": "node scripts/generate-app-icons.mjs"
   },
   "dependencies": {
